# Dobrynin_Scaling_Theory

./: .gitignore  All Data.xlsx  Bg_Bth_Pe_range_nested.json  Data.csv  README.md  TODO.md  Theoretical Plots.xlsx  future_plans.md  generate_data.py  generate_surfaces.py  grid_clean.py  pyproject.toml  read_exp_data.py  scalingEqs.py  start_gui.py  surface_bins.json  surface_bins_nested.json
CSV_files/: NaCMC Lopez.csv  NaCMC Lopez.json  NaCMC.csv  NaPSS.csv  PEO Ebagninin.csv  PEO Ebagninin.json  PS THF Jamieson.csv  PS Toluene Kulicke Zakin.csv  PS Toluene Kulicke Zakin.json
Data/: All Data.xlsx
Mike gui test/: Generated mesh-2D rep.tif  Generated mesh-3D rep.tif  Solution Scaling Plots.opju
Mike_network_test/: Bg_Bth_Pe_range.json  Ideas.md  gen_and_train.py  mike_gen_and_train.py  mike_gen_and_train_gpu_only.py  mike_torch_lib.py  mike_torch_lib_cpu.py  run.sh  scaling_torch_lib.py  speed_test.py  surface_bins.json  test_checkpoint_accuracy.py
Molecular-Fingerprint-Code/: benchmark_1gpu.py  benchmark_1gpu_batch_4000.py  benchmark_2gpu.py  benchmark_adam_opt_learning_curve.py  benchmark_adam_opt_learning_curve10.py  benchmark_adam_opt_learning_curve_vary_len_data.py  filter_grid.py  generate_data.py  generate_surfaces.py  labels_normalized.pt  load_data.py  mike_gen_and_train.py  mike_gen_and_train01.py  mike_gen_and_train_vary_size.py  mike_gen_and_train_vary_size_arch.py  mike_torch_lib.py  mike_torch_lib10.py  nn_arch.py  raytune.py  read_exp_data.py  scaling_torch_lib.py  scaling_torch_lib_bth.py  surface_bins.json  test_model_on_exp_data.py  train.py  (+1 more)
(+812 files in other folders)
