[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "psst"
version = "0.0.2"
requires-python = ">=3.8"
dependencies = [
    "ruamel.yaml",
    "torch",
]

[tool.pytest.ini_options]
testpaths = ["test",]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
]